--- a/mindex.html
+++ b/mindex.html
@@ -2,7 +2,7 @@
 
 <html lang="en">
         <link rel="alternate" media="only screen and (max-width: 640px)"
-      href="http:/index.html" >
+      href="http://maxbittker.github.io/mobileURLtest/" >
 
 <head>
   <meta charset="utf-8">
