--- a/index.html
+++ b/index.html
@@ -21,14 +21,14 @@
     <script language=javascript>
 <!--
   
-      document.addEventListener('DOMContentLoaded', function(){
+      // document.addEventListener('DOMContentLoaded', function(){
 
     var isMobile = window.matchMedia("only screen and (max-width: 760px)");
 
     if (isMobile.matches) {
    location.replace("http://maxbittker.github.io/mobileURLtest/mindex.html");
     }
- });
+ // });
         
 -->
 </script>
