--- a/mindex.html
+++ b/mindex.html
@@ -1,7 +1,7 @@
 <!doctype html>
 
 <html lang="en">
-        <link rel="alternate" media="only screen and (max-width: 640px)"
+        <link rel="canonical" media="only screen and (max-width: 640px)"
       href="http://maxbittker.github.io/mobileURLtest/" >
 
 <head>
