--- a/index.html
+++ b/index.html
@@ -8,10 +8,12 @@
   
       // document.addEventListener('DOMContentLoaded', function(){
 
+
+
     var isMobile = window.matchMedia("only screen and (max-width: 640px)");
 
     if (isMobile.matches) {
-   location.replace("http://maxbittker.github.io/mobileURLtest/mindex.html");
+   location = "http://maxbittker.github.io/mobileURLtest/mindex.html" ;
     }
 </script>
 <head>
