--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 
 
 
-    var isMobile = window.matchMedia("only screen and (max-width: 640px)");
+    // var isMobile = window.matchMedia("only screen and (max-width: 640px)");
 
-    if (isMobile.matches) {
+    if (true) {
    location = "http://maxbittker.github.io/mobileURLtest/mindex.html" ;
     }
 </script>
