--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-
+<meta name="viewport" content="width=device-width, initial-scale=1">
 <html lang="en">
         <link rel="alternate" media="only screen and (max-width: 640px)"
       href="http://maxbittker.github.io/mobileURLtest/mindex.html" >
@@ -10,7 +10,7 @@
 
 
 
-    var isMobile = window.matchMedia("only screen and (max-width: 1000px)");
+    var isMobile = window.matchMedia("only screen and (max-width: 640px)");
 
     if (isMobile.matches) {
    location = "http://maxbittker.github.io/mobileURLtest/mindex.html" ;
