--- a/mindex.html
+++ b/mindex.html
@@ -6,7 +6,7 @@
 
 <head>
   <meta charset="utf-8">
-
+<meta name="viewport" content="width=device-width, initial-scale=1">
   <title>KeySystems</title>
   <meta name="description" content="KeySystems HomePage">
   
