--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
-<meta name="viewport" content="width=device-width, initial-scale=1">
+<!--<meta name="viewport" content="width=device-width, initial-scale=1">-->
 <html lang="en">
-        <link rel="alternate" media="only screen and (max-width: 640px)"
+        <link rel="alternate" media="only screen and (max-device-width: 640px)"
       href="http://maxbittker.github.io/mobileURLtest/mindex.html" >
   <script language=javascript>
 <!--
@@ -10,7 +10,7 @@
 
 
 
-    var isMobile = window.matchMedia("only screen and (max-width: 640px)");
+    var isMobile = window.matchMedia("only screen and (max-device-width: 640px)");
 
     if (isMobile.matches) {
    location = "http://maxbittker.github.io/mobileURLtest/mindex.html" ;
